--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <img src="./images/__image-koca.jpg" alt="Куршская коса" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link content__link-dimming">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="place__link content__link-dimming">park-kosa.ru</a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -82,7 +82,11 @@
           <img src="./images/__image-kolsk.jpg" alt="Кольский" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link content__link-dimming">National Geographic</a>
+            <a
+              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              class="place__link content__link-dimming"
+              >National Geographic</a
+            >
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -103,7 +107,11 @@
           <img src="./images/__image-altai.jpg" alt="Алтай" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link content__link-dimming">YouTube </a>
+            <a
+              href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
+              class="place__link content__link-dimming"
+              >YouTube
+            </a>
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -125,7 +133,9 @@
           <img src="./images/__image-baikal.jpg" alt="Зимний Байкал" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link content__link-dimming">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" class="place__link content__link-dimming"
+              >https://vk.com/baikalmile</a
+            >
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -145,7 +155,9 @@
           <img src="./images/__image-karelia.jpg" alt="Карелия" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link content__link-dimming">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" class="place__link content__link-dimming"
+              >http://vodlozero.ru/</a
+            >
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -161,7 +173,11 @@
         </div>
       </section>
       <section class="cover content__section-cover">
-        <a href="#" target="_blank" class="cover__item content__link-dimming">
+        <a
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="_blank"
+          class="cover__item content__link-dimming"
+        >
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
@@ -172,19 +188,23 @@
     <footer class="footer page__footer">
       <ul class="footer__list">
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="#">Карты</a>
+          <a class="footer__link content__link-dimming" href="https://yandex.ru/maps">Карты</a>
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="#">Погода</a>
+          <a class="footer__link content__link-dimming" href="https://yandex.ru/pogoda">Погода</a>
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="#">Расписание</a>
+          <a class="footer__link content__link-dimming" href="https://rasp.yandex.ru">Расписание</a>
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="#">Календарь</a>
+          <a class="footer__link content__link-dimming" href="https://calendar.yandex.ru"
+            >Календарь</a
+          >
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="#">Путешествия</a>
+          <a class="footer__link content__link-dimming" href="https://travel.yandex.ru"
+            >Путешествия</a
+          >
         </li>
       </ul>
       <p class="footer__copyright">2023. Алексеев Сергей</p>
