--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           <img src="./images/__image-koca.jpg" alt="Куршская коса" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="place__link content__link-dimming">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" target="_blank" class="place__link content__link-dimming"
+              >park-kosa.ru</a
+            >
           </div>
           <div class="place__paragraph-container">
             <p class="place__paragraph">
@@ -84,6 +86,7 @@
             <p class="place__url-heading">URL</p>
             <a
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              target="_blank"
               class="place__link content__link-dimming"
               >National Geographic</a
             >
@@ -109,6 +112,7 @@
             <p class="place__url-heading">URL</p>
             <a
               href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
+              target="_blank"
               class="place__link content__link-dimming"
               >YouTube
             </a>
@@ -133,7 +137,10 @@
           <img src="./images/__image-baikal.jpg" alt="Зимний Байкал" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="place__link content__link-dimming"
+            <a
+              href="https://vk.com/baikalmile"
+              target="_blank"
+              class="place__link content__link-dimming"
               >https://vk.com/baikalmile</a
             >
           </div>
@@ -155,7 +162,7 @@
           <img src="./images/__image-karelia.jpg" alt="Карелия" class="place_image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://vodlozero.ru" class="place__link content__link-dimming"
+            <a href="http://vodlozero.ru" target="_blank" class="place__link content__link-dimming"
               >http://vodlozero.ru/</a
             >
           </div>
@@ -188,21 +195,42 @@
     <footer class="footer page__footer">
       <ul class="footer__list">
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="https://yandex.ru/maps">Карты</a>
+          <a
+            class="footer__link content__link-dimming"
+            href="https://yandex.ru/maps"
+            target="_blank"
+            >Карты</a
+          >
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="https://yandex.ru/pogoda">Погода</a>
+          <a
+            class="footer__link content__link-dimming"
+            href="https://yandex.ru/pogoda"
+            target="_blank"
+            >Погода</a
+          >
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="https://rasp.yandex.ru">Расписание</a>
+          <a
+            class="footer__link content__link-dimming"
+            href="https://rasp.yandex.ru"
+            target="_blank"
+            >Расписание</a
+          >
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="https://calendar.yandex.ru"
+          <a
+            class="footer__link content__link-dimming"
+            href="https://calendar.yandex.ru"
+            target="_blank"
             >Календарь</a
           >
         </li>
         <li class="footer__list-item">
-          <a class="footer__link content__link-dimming" href="https://travel.yandex.ru"
+          <a
+            class="footer__link content__link-dimming"
+            href="https://travel.yandex.ru"
+            target="_blank"
             >Путешествия</a
           >
         </li>
