--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="header page__header">
       <img src="./images/__logo.svg" alt="Логотип" class="header__logo" />
       <div class="header__links">
-        <a href="#" class="header__link content__link-dimming header__link_active">Ru</a>
-        <a href="#" class="header__link content__link-dimming">En</a>
+        <a href="#" class="header__link page__link-dimming header__link_active">Ru</a>
+        <a href="#" class="header__link page__link-dimming">En</a>
       </div>
     </header>
     <main class="content page__content">
@@ -58,10 +58,10 @@
       <section class="places content__section-places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
-          <img src="./images/__image-koca.jpg" alt="Куршская коса" class="place_image" />
+          <img src="./images/__image-koca.jpg" alt="Куршская коса" class="place__image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://park-kosa.ru" target="_blank" class="place__link content__link-dimming"
+            <a href="http://park-kosa.ru" target="_blank" class="place__link page__link-dimming"
               >park-kosa.ru</a
             >
           </div>
@@ -81,13 +81,13 @@
         </div>
         <div class="place">
           <h2 class="place__title">Кольский</h2>
-          <img src="./images/__image-kolsk.jpg" alt="Кольский" class="place_image" />
+          <img src="./images/__image-kolsk.jpg" alt="Кольский" class="place__image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               target="_blank"
-              class="place__link content__link-dimming"
+              class="place__link page__link-dimming"
               >National Geographic</a
             >
           </div>
@@ -107,13 +107,13 @@
         </div>
         <div class="place">
           <h2 class="place__title">Алтай</h2>
-          <img src="./images/__image-altai.jpg" alt="Алтай" class="place_image" />
+          <img src="./images/__image-altai.jpg" alt="Алтай" class="place__image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a
               href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
               target="_blank"
-              class="place__link content__link-dimming"
+              class="place__link page__link-dimming"
               >YouTube
             </a>
           </div>
@@ -134,13 +134,13 @@
         </div>
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
-          <img src="./images/__image-baikal.jpg" alt="Зимний Байкал" class="place_image" />
+          <img src="./images/__image-baikal.jpg" alt="Зимний Байкал" class="place__image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a
               href="https://vk.com/baikalmile"
               target="_blank"
-              class="place__link content__link-dimming"
+              class="place__link page__link-dimming"
               >https://vk.com/baikalmile</a
             >
           </div>
@@ -159,10 +159,10 @@
         </div>
         <div class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="./images/__image-karelia.jpg" alt="Карелия" class="place_image" />
+          <img src="./images/__image-karelia.jpg" alt="Карелия" class="place__image" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://vodlozero.ru" target="_blank" class="place__link content__link-dimming"
+            <a href="http://vodlozero.ru" target="_blank" class="place__link page__link-dimming"
               >http://vodlozero.ru/</a
             >
           </div>
@@ -183,7 +183,7 @@
         <a
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="_blank"
-          class="cover__item content__link-dimming"
+          class="cover__item page__link-dimming"
         >
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
@@ -195,47 +195,35 @@
     <footer class="footer page__footer">
       <ul class="footer__list">
         <li class="footer__list-item">
-          <a
-            class="footer__link content__link-dimming"
-            href="https://yandex.ru/maps"
-            target="_blank"
+          <a class="footer__link page__link-dimming" href="https://yandex.ru/maps" target="_blank"
             >Карты</a
           >
         </li>
         <li class="footer__list-item">
-          <a
-            class="footer__link content__link-dimming"
-            href="https://yandex.ru/pogoda"
-            target="_blank"
+          <a class="footer__link page__link-dimming" href="https://yandex.ru/pogoda" target="_blank"
             >Погода</a
           >
         </li>
         <li class="footer__list-item">
-          <a
-            class="footer__link content__link-dimming"
-            href="https://rasp.yandex.ru"
-            target="_blank"
+          <a class="footer__link page__link-dimming" href="https://rasp.yandex.ru" target="_blank"
             >Расписание</a
           >
         </li>
         <li class="footer__list-item">
           <a
-            class="footer__link content__link-dimming"
+            class="footer__link page__link-dimming"
             href="https://calendar.yandex.ru"
             target="_blank"
             >Календарь</a
           >
         </li>
         <li class="footer__list-item">
-          <a
-            class="footer__link content__link-dimming"
-            href="https://travel.yandex.ru"
-            target="_blank"
+          <a class="footer__link page__link-dimming" href="https://travel.yandex.ru" target="_blank"
             >Путешествия</a
           >
         </li>
       </ul>
-      <p class="footer__copyright">2023. Алексеев Сергей</p>
+      <p class="footer__copyright">&copy; 2023. Алексеев Сергей</p>
     </footer>
   </body>
 </html>
