--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <title>Russian travel</title>
+    <title>Путешествия по России</title>
   </head>
   <body class="page">
     <header class="header page__header">
       <img src="./images/__logo.svg" alt="Логотип" class="header__logo" />
-      <div class="header__links">
-        <a href="#" class="header__link page__link-dimming header__link_active">Ru</a>
-        <a href="#" class="header__link page__link-dimming">En</a>
-      </div>
+      <ul class="header__list">
+        <li class="header__list-item">
+          <a href="#" class="header__lang-link page__link-dimming header__lang-link_active">Ru</a>
+        </li>
+        <li class="header__list-item">
+          <a href="#" class="header__lang-link page__link-dimming">En</a>
+        </li>
+      </ul>
     </header>
     <main class="content page__content">
       <section class="lead content__section-lead">
-        <h1 class="lead__title">Путешествия по России</h1>
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./images/__image.jpg" alt="Главная картинка" class="lead__image" />
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__figure">
+          <img
+            src="./images/__image.jpg"
+            alt="Картинка с маршрутом путешествия"
+            class="lead__image"
+          />
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro content__section-intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
@@ -34,33 +44,47 @@
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов 11</li>
-          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-          <li class="intro__list-item">Природных заповедников 105</li>
-          <li class="intro__list-item">Аэропортов 241</li>
+          <li class="intro__list-item">
+            <span class="intro__list-item_font_bold">Часовых поясов</span> 11
+          </li>
+          <li class="intro__list-item">
+            <span class="intro__list-item_font_bold">Объектов природного наследия ЮНЕСКО</span> 12
+          </li>
+          <li class="intro__list-item">
+            <span class="intro__list-item_font_bold">Объектов культурного наследия ЮНЕСКО</span> 16
+          </li>
+          <li class="intro__list-item">
+            <span class="intro__list-item_font_bold">Природных заповедников</span> 105
+          </li>
+          <li class="intro__list-item">
+            <span class="intro__list-item_font_bold">Аэропортов</span> 241
+          </li>
         </ul>
       </section>
       <section class="photo-grid content__section-photo-grid">
-        <img src="./images/__item-11.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-10.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-9.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-8.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-7.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-6.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-5.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-4.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-3.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-2.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item-1.jpg" alt="Фото-грид" class="photo-grid__item" />
-        <img src="./images/__item.jpg" alt="Фото-грид" class="photo-grid__item" />
+        <img
+          src="./images/__item-11.jpg"
+          alt="Окно поезда изнутри вагона"
+          class="photo-grid__item"
+        />
+        <img src="./images/__item-10.jpg" alt="Снгежные горы" class="photo-grid__item" />
+        <img src="./images/__item-9.jpg" alt="Волк на стоге сена" class="photo-grid__item" />
+        <img src="./images/__item-8.jpg" alt="Лес в тумане" class="photo-grid__item" />
+        <img src="./images/__item-7.jpg" alt="машина на льду" class="photo-grid__item" />
+        <img src="./images/__item-6.jpg" alt="Пляж" class="photo-grid__item" />
+        <img src="./images/__item-5.jpg" alt="Горы" class="photo-grid__item" />
+        <img src="./images/__item-4.jpg" alt="Знак пешеходного перехода" class="photo-grid__item" />
+        <img src="./images/__item-3.jpg" alt="Горы" class="photo-grid__item" />
+        <img src="./images/__item-2.jpg" alt="Горы" class="photo-grid__item" />
+        <img src="./images/__item-1.jpg" alt="Горы" class="photo-grid__item" />
+        <img src="./images/__item.jpg" alt="Горы в тумане" class="photo-grid__item" />
       </section>
       <section class="places content__section-places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <img src="./images/__image-koca.jpg" alt="Куршская коса" class="place__image" />
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a href="http://park-kosa.ru" target="_blank" class="place__link page__link-dimming"
               >park-kosa.ru</a
             >
@@ -78,12 +102,12 @@
               окуная в спокойствие природы и запах стального, прохладного моря.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <img src="./images/__image-kolsk.jpg" alt="Кольский" class="place__image" />
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               target="_blank"
@@ -104,12 +128,12 @@
               увидеть северное сияние начинает сбываться с билетом в Мурманск.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <img src="./images/__image-altai.jpg" alt="Алтай" class="place__image" />
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a
               href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
               target="_blank"
@@ -131,12 +155,12 @@
               края.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <img src="./images/__image-baikal.jpg" alt="Зимний Байкал" class="place__image" />
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a
               href="https://vk.com/baikalmile"
               target="_blank"
@@ -156,12 +180,12 @@
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <img src="./images/__image-karelia.jpg" alt="Карелия" class="place__image" />
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a href="http://vodlozero.ru" target="_blank" class="place__link page__link-dimming"
               >http://vodlozero.ru/</a
             >
@@ -177,15 +201,15 @@
               медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="cover content__section-cover">
         <a
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="_blank"
-          class="cover__item page__link-dimming"
+          class="cover__item"
         >
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
           </p>
@@ -193,36 +217,44 @@
       </section>
     </main>
     <footer class="footer page__footer">
-      <ul class="footer__list">
-        <li class="footer__list-item">
-          <a class="footer__link page__link-dimming" href="https://yandex.ru/maps" target="_blank"
-            >Карты</a
-          >
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link page__link-dimming" href="https://yandex.ru/pogoda" target="_blank"
-            >Погода</a
-          >
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link page__link-dimming" href="https://rasp.yandex.ru" target="_blank"
-            >Расписание</a
-          >
-        </li>
-        <li class="footer__list-item">
-          <a
-            class="footer__link page__link-dimming"
-            href="https://calendar.yandex.ru"
-            target="_blank"
-            >Календарь</a
-          >
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link page__link-dimming" href="https://travel.yandex.ru" target="_blank"
-            >Путешествия</a
-          >
-        </li>
-      </ul>
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__list-item">
+            <a class="footer__link page__link-dimming" href="https://yandex.ru/maps" target="_blank"
+              >Карты</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a
+              class="footer__link page__link-dimming"
+              href="https://yandex.ru/pogoda"
+              target="_blank"
+              >Погода</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a class="footer__link page__link-dimming" href="https://rasp.yandex.ru" target="_blank"
+              >Расписание</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a
+              class="footer__link page__link-dimming"
+              href="https://calendar.yandex.ru"
+              target="_blank"
+              >Календарь</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a
+              class="footer__link page__link-dimming"
+              href="https://travel.yandex.ru"
+              target="_blank"
+              >Путешествия</a
+            >
+          </li>
+        </ul>
+      </nav>
       <p class="footer__copyright">&copy; 2023. Алексеев Сергей</p>
     </footer>
   </body>
