--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         </p>
         <ul class="intro__list">
           <li class="intro__list-item">
-            <span class="intro__list-item_font_bold">Часовых поясов</span> 11
+            <span class="intro__list-item-bold">Часовых поясов</span> 11
           </li>
           <li class="intro__list-item">
-            <span class="intro__list-item_font_bold">Объектов природного наследия ЮНЕСКО</span> 12
+            <span class="intro__list-item-bold">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li class="intro__list-item">
-            <span class="intro__list-item_font_bold">Объектов культурного наследия ЮНЕСКО</span> 16
+            <span class="intro__list-item-bold">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li class="intro__list-item">
-            <span class="intro__list-item_font_bold">Природных заповедников</span> 105
+            <span class="intro__list-item-bold">Природных заповедников</span> 105
           </li>
           <li class="intro__list-item">
-            <span class="intro__list-item_font_bold">Аэропортов</span> 241
+            <span class="intro__list-item-bold">Аэропортов</span> 241
           </li>
         </ul>
       </section>
